--- a/src/pages/calculadoraCientifica/calculadoraCientifica.css
+++ b/src/pages/calculadoraCientifica/calculadoraCientifica.css
@@ -4,7 +4,6 @@
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: auto;
   background-color: #2196f3;
-  padding: 10px;
 }
 
 .grid-item {
@@ -16,6 +15,9 @@
 }
 .grid-item:hover {
   background-color: antiquewhite;
+}
+.cientificButton {
+  font-size: 12px;
 }
 
 .grid-item:active {
@@ -35,7 +37,7 @@
   background-color: aliceblue;
 }
 
-.normalVista {
+.cientificaVista {
   display: grid;
   grid-template-rows: repeat(2, 3fr);
   background-color: #2196f3;
@@ -49,7 +51,7 @@
   box-sizing: border-box;
 }
 
-.normalEntrada {
+.cientificaEntrada {
   padding: 2em;
   box-sizing: border-box;
 }
@@ -86,11 +88,12 @@
   grid-template-rows: auto;
   background-color: #2196f3;
   padding: 10px;
+  margin-left: -20px;
 }
 @media screen and (max-width: 903px) {
   .normalTeclado {
     display: grid;
-    width: 90vw;
+    width: 55vw;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto;
     background-color: #2196f3;
@@ -112,11 +115,15 @@
     background-color: rgba(63, 201, 97, 0.8);
   }
 
-  .normalVista {
+  .cientificaVista {
     display: grid;
     grid-template-rows: repeat(2, 3fr);
     background-color: #2196f3;
     padding: 10px;
-    width: 90vw;
+    width: 95vw;
+  }
+
+  .tecladoCientifico {
+    width: 40vw;
   }
 }
